<resources>
    <string name="app_name">QuizBuilder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvGameName">Wordsmith</string>
    <string name="tvTagLine">difficult definitions defined</string>
    <string name="tvInputInfo">Please enter your name to play:</string>
    <string name="btnStart">Start Game</string>
    <string name="etInputName">Current Player</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="tvDefinition">Definition</string>
    <string name="tvTouchToSelect">Touch to select word</string>
    <string name="btnWordOne">WORD 1</string>
    <string name="btnWordTwo">WORD 2</string>
    <string name="btnWordThree">WORD 3</string>
    <string name="btnWordFour">WORD 4</string>
    <string name="tvName">Score: </string>
    <string name="tvScore">0</string>
    <string name="btnReset">Restart</string>
</resources>
