<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#000000"
    android:orientation="vertical"
   >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGameName"
        android:id="@+id/tvGameName"
        android:textColor="#fff2cc"
        android:hapticFeedbackEnabled="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTagLine"
        android:id="@+id/tvTagLine"
        android:textColor="#ffc000"
        android:typeface="sans"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_below="@+id/tvGameName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/etInputName"
        android:background="#ffffff"
        android:text="@string/etInputName"
        android:width="200dp"
        android:textStyle="italic"
        android:layout_above="@+id/btnStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:padding="3dp"
        android:inputType="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvInputInfo"
        android:id="@+id/tvInputInfo"
        android:textColor="#ffffff"
        android:gravity="center"
        android:padding="12dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:layout_above="@+id/etInputName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:text="@string/btnStart"
        android:background="#ffc000"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:textStyle="bold"
        android:layout_marginBottom="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:onClick="sendMessage"
        />
    <!--android:onClick="sendMessage" runs sendMessage(View view)-->

</RelativeLayout>
